hide navigation bar

--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -150,7 +151,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="解锁密码设置" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHT-C0-c67">
                                 <rect key="frame" x="16" y="192" width="124" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="124" id="1Eh-Ob-zdk"/>
+                                    <constraint firstAttribute="width" constant="124" id="Mdn-oT-aba"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                 <nil key="textColor"/>
@@ -159,7 +160,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="3" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RbF-XE-U3G">
                                 <rect key="frame" x="262" y="121" width="97" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="K6j-lB-03L"/>
+                                    <constraint firstAttribute="width" constant="97" id="WzI-uY-Joc"/>
                                 </constraints>
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                 <nil key="textColor"/>
@@ -172,13 +173,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61k-SS-R4q">
-                                <rect key="frame" x="117" y="333" width="141" height="32"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryr-Zb-01A">
+                                <rect key="frame" x="45" y="384" width="120" height="32"/>
                                 <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="141" id="VHE-4a-2nf"/>
-                                    <constraint firstAttribute="height" constant="32" id="dLU-59-3ML"/>
+                                    <constraint firstAttribute="height" constant="32" id="AV5-n1-ZTY"/>
+                                    <constraint firstAttribute="width" constant="120" id="f4F-So-L2z"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
+                                <state key="normal" title="返回"/>
+                                <connections>
+                                    <action selector="backToRoot:" destination="Vnn-xC-YUk" eventType="touchUpInside" id="yf4-dH-6uY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61k-SS-R4q">
+                                <rect key="frame" x="219" y="384" width="120" height="32"/>
+                                <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
                                 <state key="normal" title="保存"/>
                                 <connections>
@@ -188,20 +198,25 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="SHT-C0-c67" secondAttribute="leading" id="5K2-ZK-E6q"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="8Lg-me-gaY" secondAttribute="bottom" constant="57" id="8uL-A2-YQL"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="STx-d8-buj" secondAttribute="bottom" constant="41" id="Hyf-Qk-dMB"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="iZl-Dw-d5H" secondAttribute="leading" id="Ibq-ob-P9W"/>
-                            <constraint firstItem="61k-SS-R4q" firstAttribute="centerX" secondItem="O5b-jM-EH0" secondAttribute="centerX" id="SX8-Yi-TUS"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="bottom" secondItem="iZl-Dw-d5H" secondAttribute="bottom" id="Tbf-IN-chH"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="O5b-jM-EH0" secondAttribute="trailingMargin" id="gZi-bd-Qfg"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" id="i9j-ep-qZb"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="STx-d8-buj" secondAttribute="trailing" constant="84" id="lDf-Z7-4tP"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="bottom" secondItem="RbF-XE-U3G" secondAttribute="bottom" id="oTt-Nf-77y"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="RbF-XE-U3G" secondAttribute="top" id="rHZ-Yh-Olw"/>
-                            <constraint firstItem="gGH-d4-mc3" firstAttribute="top" secondItem="61k-SS-R4q" secondAttribute="bottom" constant="302" id="swa-ae-uIJ"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="iZl-Dw-d5H" secondAttribute="trailing" id="v2p-xt-Rrr"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="iZl-Dw-d5H" secondAttribute="top" id="zsD-Ne-xor"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" id="9hF-0f-vZD"/>
+                            <constraint firstItem="61k-SS-R4q" firstAttribute="leading" secondItem="ryr-Zb-01A" secondAttribute="trailing" constant="54" id="KRy-lY-WmL"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="STx-d8-buj" secondAttribute="bottom" constant="41" id="NzT-IQ-OVe"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="bottom" secondItem="iZl-Dw-d5H" secondAttribute="bottom" id="Rbw-h7-69K"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="baseline" secondItem="61k-SS-R4q" secondAttribute="firstBaseline" id="Sss-6i-Jzu"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="RbF-XE-U3G" secondAttribute="top" id="Uga-5W-HW0"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="iZl-Dw-d5H" secondAttribute="leading" id="VSs-YY-EhA"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="iZl-Dw-d5H" secondAttribute="top" id="bYI-Gk-Omt"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" constant="29" id="c4e-GM-Y2w"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="top" secondItem="61k-SS-R4q" secondAttribute="top" id="cor-WG-feH"/>
+                            <constraint firstItem="gGH-d4-mc3" firstAttribute="top" secondItem="ryr-Zb-01A" secondAttribute="bottom" constant="251" id="fmN-oA-y4L"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="SHT-C0-c67" secondAttribute="leading" id="frT-Mm-Bg6"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="8Lg-me-gaY" secondAttribute="bottom" constant="57" id="gL7-Qn-oxy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="61k-SS-R4q" secondAttribute="trailing" constant="20" id="mtJ-da-o3x"/>
+                            <constraint firstItem="61k-SS-R4q" firstAttribute="baseline" secondItem="ryr-Zb-01A" secondAttribute="firstBaseline" id="qw2-aS-o5h"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="iZl-Dw-d5H" secondAttribute="trailing" id="rMH-Uc-2bs"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="bottom" secondItem="RbF-XE-U3G" secondAttribute="bottom" id="reO-q5-EC1"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="STx-d8-buj" secondAttribute="trailing" constant="84" id="rkg-bR-bKz"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="O5b-jM-EH0" secondAttribute="trailingMargin" id="tg7-Ae-RTZ"/>
                         </constraints>
                     </view>
                     <connections>
