--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="orf-UL-mMx">
                                         <rect key="frame" x="97" y="87" width="180" height="180"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="orf-UL-mMx" secondAttribute="height" multiplier="1:1" id="GHo-11-vtC"/>
+                                            <constraint firstAttribute="width" secondItem="orf-UL-mMx" secondAttribute="height" multiplier="1:1" id="9rz-ww-IGr"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="20"/>
                                         <state key="normal" title="测试文本">
@@ -66,25 +66,25 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.20299968123435974" green="0.68646222352981567" blue="0.59982043504714966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="orf-UL-mMx" firstAttribute="centerX" secondItem="fjP-v6-NYa" secondAttribute="centerX" id="3e8-IP-1lf"/>
-                                    <constraint firstItem="orf-UL-mMx" firstAttribute="top" secondItem="fjP-v6-NYa" secondAttribute="top" constant="87" id="9Rt-nf-PkB"/>
-                                    <constraint firstAttribute="bottom" secondItem="orf-UL-mMx" secondAttribute="bottom" constant="50" id="Ftt-zb-2lt"/>
-                                    <constraint firstItem="orf-UL-mMx" firstAttribute="leading" secondItem="fjP-v6-NYa" secondAttribute="leading" constant="97" id="cYY-Hc-5yd"/>
+                                    <constraint firstItem="orf-UL-mMx" firstAttribute="top" secondItem="fjP-v6-NYa" secondAttribute="top" constant="87" id="8Th-Hr-rzX"/>
+                                    <constraint firstAttribute="bottom" secondItem="orf-UL-mMx" secondAttribute="bottom" constant="50" id="BUD-lL-9mb"/>
+                                    <constraint firstItem="orf-UL-mMx" firstAttribute="leading" secondItem="fjP-v6-NYa" secondAttribute="leading" constant="97" id="J79-KU-95e"/>
+                                    <constraint firstItem="orf-UL-mMx" firstAttribute="centerX" secondItem="fjP-v6-NYa" secondAttribute="centerX" id="Msu-Lp-KEH"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用说明：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-mO-D8g">
-                                <rect key="frame" x="8" y="325" width="124" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用说明(初始解锁密码:1234)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-mO-D8g">
+                                <rect key="frame" x="8" y="325" width="313" height="33"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="124" id="Afk-LI-pzR"/>
-                                    <constraint firstAttribute="height" constant="33" id="h1k-3B-HNC"/>
+                                    <constraint firstAttribute="height" constant="33" id="6eR-4O-ed8"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="设置警戒模式后，请不要锁屏，将手机放置于包或口袋内，系统会自动关闭屏幕。   当从口袋或者包中取出手机时，若设定延时时间（默认3秒）内未解锁，则会发出警报。如成功解锁，则不会发出警报。                             " translatesAutoresizingMaskIntoConstraints="NO" id="OOG-KH-xqF">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOG-KH-xqF">
                                 <rect key="frame" x="16" y="373" width="343" height="215"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">设置警戒模式后，请不要锁屏，将手机放置于包或口袋内，系统会自动关闭屏幕。   当从口袋或者包中取出手机时，若设定延时时间（默认3秒）内未解锁（初始解锁密码：1234），则会发出警报；如成功解锁，则不会发出警报。                             </string>
                                 <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -92,8 +92,8 @@
                                 <rect key="frame" x="117" y="588" width="141" height="32"/>
                                 <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="141" id="FdP-JM-GQk"/>
-                                    <constraint firstAttribute="height" constant="32" id="Quv-mV-xFz"/>
+                                    <constraint firstAttribute="height" constant="32" id="qWg-wB-gbF"/>
+                                    <constraint firstAttribute="width" constant="141" id="y6T-96-TTM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
                                 <state key="normal" title="  通用设置" image="setting.png"/>
@@ -104,17 +104,18 @@
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="fjP-v6-NYa" firstAttribute="centerX" secondItem="OOG-KH-xqF" secondAttribute="centerX" id="4FZ-3g-MOH"/>
-                            <constraint firstItem="OOG-KH-xqF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="7Rx-3V-s4y"/>
-                            <constraint firstItem="fjP-v6-NYa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EjO-2M-4wh"/>
-                            <constraint firstItem="OOG-KH-xqF" firstAttribute="top" secondItem="iIk-mO-D8g" secondAttribute="bottom" constant="15" id="HjS-jD-0d7"/>
-                            <constraint firstItem="up8-Fm-zSC" firstAttribute="top" secondItem="Q2R-o0-BsK" secondAttribute="bottom" constant="47" id="KhB-3h-SBp"/>
-                            <constraint firstItem="OOG-KH-xqF" firstAttribute="centerX" secondItem="Q2R-o0-BsK" secondAttribute="centerX" id="bRp-e2-ku5"/>
-                            <constraint firstItem="fjP-v6-NYa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="d5F-Y7-LxM"/>
-                            <constraint firstItem="iIk-mO-D8g" firstAttribute="top" secondItem="fjP-v6-NYa" secondAttribute="bottom" constant="8" symbolic="YES" id="n3Y-qB-cyf"/>
-                            <constraint firstItem="iIk-mO-D8g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-8" id="oDa-f4-Zaa"/>
-                            <constraint firstAttribute="trailing" secondItem="fjP-v6-NYa" secondAttribute="trailing" id="w3e-dh-hNf"/>
-                            <constraint firstItem="Q2R-o0-BsK" firstAttribute="top" secondItem="OOG-KH-xqF" secondAttribute="bottom" id="zBV-Wx-han"/>
+                            <constraint firstItem="OOG-KH-xqF" firstAttribute="top" secondItem="iIk-mO-D8g" secondAttribute="bottom" constant="15" id="0ff-Wv-Tbo"/>
+                            <constraint firstItem="fjP-v6-NYa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6d3-7o-6XF"/>
+                            <constraint firstItem="fjP-v6-NYa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8i8-OD-otC"/>
+                            <constraint firstItem="iIk-mO-D8g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-8" id="8y4-EG-3CS"/>
+                            <constraint firstItem="OOG-KH-xqF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TlA-mE-Eh4"/>
+                            <constraint firstItem="iIk-mO-D8g" firstAttribute="top" secondItem="fjP-v6-NYa" secondAttribute="bottom" constant="8" symbolic="YES" id="Tuk-Zc-lHs"/>
+                            <constraint firstItem="up8-Fm-zSC" firstAttribute="top" secondItem="Q2R-o0-BsK" secondAttribute="bottom" constant="47" id="WzN-6u-PHs"/>
+                            <constraint firstItem="Q2R-o0-BsK" firstAttribute="top" secondItem="OOG-KH-xqF" secondAttribute="bottom" id="bLV-TB-ZxH"/>
+                            <constraint firstItem="fjP-v6-NYa" firstAttribute="centerX" secondItem="OOG-KH-xqF" secondAttribute="centerX" id="cpe-FL-0nY"/>
+                            <constraint firstAttribute="trailing" secondItem="fjP-v6-NYa" secondAttribute="trailing" id="hac-dZ-P9H"/>
+                            <constraint firstItem="OOG-KH-xqF" firstAttribute="centerX" secondItem="Q2R-o0-BsK" secondAttribute="centerX" id="mE2-RH-Ff6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iIk-mO-D8g" secondAttribute="trailing" constant="38" id="mUC-Xr-yzP"/>
                         </constraints>
                         <variation key="heightClass=regular-widthClass=compact">
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
