--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
                                     <constraint firstItem="orf-UL-mMx" firstAttribute="centerX" secondItem="fjP-v6-NYa" secondAttribute="centerX" id="Msu-Lp-KEH"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用说明(初始解锁密码:1234)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-mO-D8g">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用说明(初始解锁密码:1367)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-mO-D8g">
                                 <rect key="frame" x="8" y="325" width="313" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="6eR-4O-ed8"/>
@@ -84,7 +84,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOG-KH-xqF">
                                 <rect key="frame" x="16" y="373" width="343" height="215"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">设置警戒模式后，请不要锁屏，将手机放置于包或口袋内，系统会自动关闭屏幕。   当从口袋或者包中取出手机时，若设定延时时间（默认3秒）内未解锁（初始解锁密码：1234），则会发出警报；如成功解锁，则不会发出警报。                             </string>
+                                <string key="text">设置警戒模式后，请不要锁屏，将手机放置于包或口袋内，系统会自动关闭屏幕。   当从口袋或者包中取出手机时，若设定延时时间（默认3秒）内未解锁（初始解锁密码：1367），则会发出警报；如成功解锁，则不会发出警报。                             </string>
                                 <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -255,10 +255,7 @@
                                 <rect key="frame" x="76" y="365" width="223" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <action selector="pwdInputFinished:" destination="zcb-kT-zAd" eventType="editingDidEnd" id="Jjl-x2-Oy8"/>
-                                </connections>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
