--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -37,7 +36,7 @@
         <!--RootView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="RootView" id="BYZ-38-t0r" customClass="ViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="rootView" title="RootView" id="BYZ-38-t0r" customClass="ViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3n2-in-yqR"/>
                         <viewControllerLayoutGuide type="bottom" id="up8-Fm-zSC"/>
@@ -151,7 +150,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="解锁密码设置" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHT-C0-c67">
                                 <rect key="frame" x="16" y="192" width="124" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="124" id="Mdn-oT-aba"/>
+                                    <constraint firstAttribute="width" constant="124" id="W2U-Ge-QMf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
                                 <nil key="textColor"/>
@@ -160,7 +159,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="3" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RbF-XE-U3G">
                                 <rect key="frame" x="262" y="121" width="97" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="WzI-uY-Joc"/>
+                                    <constraint firstAttribute="width" constant="97" id="fqO-dH-KT0"/>
                                 </constraints>
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                 <nil key="textColor"/>
@@ -177,8 +176,8 @@
                                 <rect key="frame" x="45" y="384" width="120" height="32"/>
                                 <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="AV5-n1-ZTY"/>
-                                    <constraint firstAttribute="width" constant="120" id="f4F-So-L2z"/>
+                                    <constraint firstAttribute="height" constant="32" id="Jeb-In-S66"/>
+                                    <constraint firstAttribute="width" constant="120" id="cB1-PS-Sh3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
                                 <state key="normal" title="返回"/>
@@ -195,28 +194,40 @@
                                     <action selector="saveSettings:" destination="Vnn-xC-YUk" eventType="touchUpInside" id="bpy-1m-FN6"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bhJ-aJ-hrO">
+                                <rect key="frame" x="219" y="480" width="120" height="32"/>
+                                <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
+                                <state key="normal" title="测试"/>
+                                <connections>
+                                    <action selector="navToLicense:" destination="Vnn-xC-YUk" eventType="touchUpInside" id="YiY-v8-Pus"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" id="9hF-0f-vZD"/>
-                            <constraint firstItem="61k-SS-R4q" firstAttribute="leading" secondItem="ryr-Zb-01A" secondAttribute="trailing" constant="54" id="KRy-lY-WmL"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="STx-d8-buj" secondAttribute="bottom" constant="41" id="NzT-IQ-OVe"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="bottom" secondItem="iZl-Dw-d5H" secondAttribute="bottom" id="Rbw-h7-69K"/>
-                            <constraint firstItem="ryr-Zb-01A" firstAttribute="baseline" secondItem="61k-SS-R4q" secondAttribute="firstBaseline" id="Sss-6i-Jzu"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="RbF-XE-U3G" secondAttribute="top" id="Uga-5W-HW0"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="iZl-Dw-d5H" secondAttribute="leading" id="VSs-YY-EhA"/>
-                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="iZl-Dw-d5H" secondAttribute="top" id="bYI-Gk-Omt"/>
-                            <constraint firstItem="ryr-Zb-01A" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" constant="29" id="c4e-GM-Y2w"/>
-                            <constraint firstItem="ryr-Zb-01A" firstAttribute="top" secondItem="61k-SS-R4q" secondAttribute="top" id="cor-WG-feH"/>
-                            <constraint firstItem="gGH-d4-mc3" firstAttribute="top" secondItem="ryr-Zb-01A" secondAttribute="bottom" constant="251" id="fmN-oA-y4L"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="SHT-C0-c67" secondAttribute="leading" id="frT-Mm-Bg6"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="8Lg-me-gaY" secondAttribute="bottom" constant="57" id="gL7-Qn-oxy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="61k-SS-R4q" secondAttribute="trailing" constant="20" id="mtJ-da-o3x"/>
-                            <constraint firstItem="61k-SS-R4q" firstAttribute="baseline" secondItem="ryr-Zb-01A" secondAttribute="firstBaseline" id="qw2-aS-o5h"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="iZl-Dw-d5H" secondAttribute="trailing" id="rMH-Uc-2bs"/>
-                            <constraint firstItem="STx-d8-buj" firstAttribute="bottom" secondItem="RbF-XE-U3G" secondAttribute="bottom" id="reO-q5-EC1"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="STx-d8-buj" secondAttribute="trailing" constant="84" id="rkg-bR-bKz"/>
-                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="O5b-jM-EH0" secondAttribute="trailingMargin" id="tg7-Ae-RTZ"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="STx-d8-buj" secondAttribute="trailing" constant="84" id="1J0-Ca-kaC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="61k-SS-R4q" secondAttribute="trailing" constant="20" id="35z-eI-Q4p"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="iZl-Dw-d5H" secondAttribute="top" id="4SZ-12-Uxk"/>
+                            <constraint firstItem="61k-SS-R4q" firstAttribute="leading" secondItem="ryr-Zb-01A" secondAttribute="trailing" constant="54" id="7L1-X2-rmb"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="O5b-jM-EH0" secondAttribute="trailingMargin" id="9PH-8M-qM7"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="trailing" secondItem="iZl-Dw-d5H" secondAttribute="trailing" id="Jxb-bl-y75"/>
+                            <constraint firstItem="gGH-d4-mc3" firstAttribute="top" secondItem="ryr-Zb-01A" secondAttribute="bottom" constant="251" id="PPX-yT-s8b"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="top" secondItem="61k-SS-R4q" secondAttribute="top" id="Zdq-1T-uqX"/>
+                            <constraint firstItem="gGH-d4-mc3" firstAttribute="top" secondItem="bhJ-aJ-hrO" secondAttribute="bottom" constant="155" id="aeo-uV-avh"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="bottom" secondItem="RbF-XE-U3G" secondAttribute="bottom" id="bMF-zI-Ava"/>
+                            <constraint firstItem="RbF-XE-U3G" firstAttribute="leading" secondItem="iZl-Dw-d5H" secondAttribute="leading" id="cUi-o1-ZsQ"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" id="dit-2o-9dq"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="leading" secondItem="O5b-jM-EH0" secondAttribute="leadingMargin" constant="29" id="ecF-Zp-FWY"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="leading" secondItem="SHT-C0-c67" secondAttribute="leading" id="gHF-no-bjb"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="RbF-XE-U3G" secondAttribute="top" id="jRf-HV-ihK"/>
+                            <constraint firstItem="ryr-Zb-01A" firstAttribute="baseline" secondItem="61k-SS-R4q" secondAttribute="baseline" id="qXD-wZ-rgN"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="top" secondItem="STx-d8-buj" secondAttribute="bottom" constant="41" id="qzd-mo-MFr"/>
+                            <constraint firstItem="61k-SS-R4q" firstAttribute="leading" secondItem="bhJ-aJ-hrO" secondAttribute="leading" id="u2B-xl-lQb"/>
+                            <constraint firstItem="SHT-C0-c67" firstAttribute="bottom" secondItem="iZl-Dw-d5H" secondAttribute="bottom" id="un1-xn-hk9"/>
+                            <constraint firstItem="STx-d8-buj" firstAttribute="top" secondItem="8Lg-me-gaY" secondAttribute="bottom" constant="57" id="wHS-WS-gFD"/>
+                            <constraint firstItem="61k-SS-R4q" firstAttribute="trailing" secondItem="bhJ-aJ-hrO" secondAttribute="trailing" id="wZo-Fb-ygo"/>
+                            <constraint firstItem="bhJ-aJ-hrO" firstAttribute="top" secondItem="61k-SS-R4q" secondAttribute="bottom" constant="64" id="ygM-28-yVv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -274,6 +285,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aeE-5s-rDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-294" y="-331"/>
+        </scene>
+        <!--License View Controller-->
+        <scene sceneID="YuB-V2-s0x">
+            <objects>
+                <viewController storyboardIdentifier="License" id="Wf9-l9-rXi" customClass="LicenseViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gOO-CM-d7I"/>
+                        <viewControllerLayoutGuide type="bottom" id="5xr-fZ-Pjc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BSP-Ql-IP1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JW3-CF-9Yl">
+                                <rect key="frame" x="78" y="627" width="119" height="32"/>
+                                <color key="backgroundColor" red="0.2029996812" green="0.68646222349999997" blue="0.59982043500000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="fAN-0S-Z6c"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="17"/>
+                                <state key="normal" title="同意条款并返回"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="JW3-CF-9Yl" firstAttribute="leading" secondItem="BSP-Ql-IP1" secondAttribute="leadingMargin" constant="62" id="JIi-Vf-NrR"/>
+                            <constraint firstItem="5xr-fZ-Pjc" firstAttribute="top" secondItem="JW3-CF-9Yl" secondAttribute="bottom" constant="8" symbolic="YES" id="Kzw-zM-dXt"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bWL-oD-1Mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="404" y="-331.48425787106447"/>
         </scene>
     </scenes>
     <resources>
