--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -381,7 +381,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jgq-i4-cXL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-748" y="-331.48425787106447"/>
+            <point key="canvasLocation" x="-788" y="-323"/>
         </scene>
         <!--Lock Screen View Controller-->
         <scene sceneID="KNq-qT-dnX">
@@ -2384,6 +2384,24 @@ Cg
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qb7-6b-MOA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2956" y="-331"/>
+        </scene>
+        <!--Black View Controller-->
+        <scene sceneID="lJG-Fu-VLg">
+            <objects>
+                <viewController storyboardIdentifier="Black" hidesBottomBarWhenPushed="YES" id="a57-0q-CrZ" customClass="BlackViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Uwi-B0-O9D"/>
+                        <viewControllerLayoutGuide type="bottom" id="B0R-fX-8Po"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fTt-2R-oJc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t5Y-Kx-V0u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2070" y="-331"/>
         </scene>
     </scenes>
     <resources>
